    - nth_stern_diatomic(n)           Stern's Diatomic series; fusc(n)
    - farey(n)                        list of Farey sequence order n
    - farey(n,k)                      k'th entry of Farey sequence order n
    - next_farey(n,[p,q])             next order-n rational after p/q
    - farey_rank(n,[p,q])             number of F_n less than p/q


    [FIXES]

    - nth_ramanujan_* returns undef with input of 0.

    - PP code for is_polygonal with n=0 was wrong.  Fixed and refactored.

    - Some large results that used GMP are properly objectified.

    - When using GMP, native int results are no longer objectified.

    - AKS was modding a with r, since 2012.

    - is_totient(2^k) with k >= 33, found by Trizen in 2019.

    - forsquarefree and forfactored were missing a destroy.  From Trizen.

    - todigitstring with non-standard bases and long strings.  From Trizen.

    - Fix v0.62 breaking extended precision long doubles on some machines.
      Big difference in epsilon-level precision for LambertW, Li, Zeta.

    - sieve_range documentation for depth didn't exactly match the XS code.

    - is_extra_strong_lucas_pseudoprime(5) was returning 0.

    - lucas_sequence wasn't right for some outlier cases.  This did not
      impact any primality tests or other internal code.

    - gcd(-n) and lcd(-n) would return -n instead of n.

    - All mod functions are more consistent.  Like Pari, we use mod abs(n).
      If n=0, we return undef.  If n=1, we return 0.

    - invmod(0,1) = 0 instead of undef.  Both cases make sense, but
      Pari, Mathematica, SAGE, and Math::BigInt all return 0.

    - sqrtmod was not solving some cases, e.g. sqrtmod(4,8).

    - chinese uses abs modulos, and values are all pre-modded.
      This fixes negative inputs, e.g. chinese([-4,17],[17,-19])

    - The 70-rt-bignum test was horrendously slow with bignum 0.60+.
      It was bypassing the validation that sanitized the input.

    - Fix logint for base > n.  Github #75.
